--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,8 +6,9 @@
 # Appearance
 
 appearance:
-  theme_day: minimal
-  theme_night: minimal
+  theme_day: 1950s
+  theme_night: 1950s
+  day_night: true
   font: minimal
   font_size: L
 
@@ -18,8 +19,8 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Hugo Blox Builder.'
-    twitter: 'GetResearchDev'
+    description: 'Ph.D. Student in Economics at Duke University'
+    twitter: 'yusuke_ishihata'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
