--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -22,7 +22,7 @@ marketing:
     description: 'Ph.D. Student in Economics at Duke University'
     twitter: 'yusuke_ishihata'
   analytics:
-    google_analytics: ''
+    google_analytics: 'G-BWJLM6J41D'
     baidu_tongji: ''
     google_tag_manager: ''
     microsoft_clarity: ''
