--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -19,7 +19,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'Ph.D. Student in Economics at Duke University'
+    description: 'Ph.D. Candidate in Economics at Duke University'
     twitter: 'yusuke_ishihata'
   analytics:
     google_analytics: 'G-BWJLM6J41D'
