--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -27,5 +27,5 @@ main:
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
-    url: static/tex/yusukeishihata_cv.pdf
+    url: tex/yusukeishihata_cv.pdf
     weight: 40
